--- a/themes/hexo3/_config.yml
+++ b/themes/hexo3/_config.yml
@@ -60,6 +60,7 @@ doc_sidebar:
     Doku Fırçaları: graphics/04.05.textureBrushes.html
     Renk Geçiş Fırçaları: graphics/04.06.gradientBrushes.html
     Doğrusal Renk Geçiş Fırçası: graphics/04.07.linearGradientBrush.html
+    Versiyon Geçmişi: graphics/versionHistory.html
 
 doc_sidebar_en:
   Javascript Graphic Interface:
@@ -110,6 +111,7 @@ doc_sidebar_en:
     Texture Brushes: graphics/en/04.05.textureBrushes.html
     Gradient Brushes: graphics/en/04.06.gradientBrushes.html
     Linear Gradient Brush: graphics/en/04.07.linearGradientBrush.html
+    Version History: graphics/en/versionHistory.html
 
 
 google_analytics: UA-133715520-1
